# simple-transform

./: Dockerfile  README.md  setup.cfg
simple_transform/: simple_transform.py
