[metadata]
name = simple-transform
version = 0.0.1
author = Simon Overell
author_email = simon@human.ai
description = Apply a specified transform to given rows in a CSV file.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/humanai-repo/simple-transform
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
	simple_transform = simple_transform.simple_transform:main